--- a/project/templates/orders/order_create.html
+++ b/project/templates/orders/order_create.html
@@ -13,7 +13,7 @@
     {% for item in items %}
       <li>
         <span>{{ item.product.name }}</span>
-        <span>{{ item.quantity }} × {{ item.product.price }} ₽</span>
+        <span>{{ item.quantity }} × {{ item.product.price }} BYN</span>
       </li>
     {% endfor %}
   </ul>
