--- a/project/templates/orders/pp_order_detail.html
+++ b/project/templates/orders/pp_order_detail.html
@@ -10,7 +10,7 @@
         <p><strong>Пользователь:</strong> {{ order.user }}</p>
         <p><strong>Магазин:</strong> {{ order.shop }}</p>
         <p><strong>ПВЗ:</strong> {{ order.pickup_point }}</p>
-        <p><strong>Сумма:</strong> {{ order.total_price }} ₽</p>
+        <p><strong>Сумма:</strong> {{ order.total_price }} BYN</p>
         <p><strong>Текущий статус:</strong> {{ order.get_status_display }}</p>
         <p><strong>Оплачен:</strong> {{ order.is_paid }}</p>
       </div>
