--- a/project/templates/orders/user_orders.html
+++ b/project/templates/orders/user_orders.html
@@ -19,7 +19,7 @@
           <ul class="order-items">
             {% for item in order.items.all %}
               <li>
-                {{ item.product.name }} — {{ item.quantity }} × {{ item.price }} ₽
+                {{ item.product.name }} — {{ item.quantity }} × {{ item.price }} BYN
               </li>
             {% endfor %}
           </ul>
