--- a/project/templates/admin/user_edit.html
+++ b/project/templates/admin/user_edit.html
@@ -24,7 +24,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Сохранить</button>
-        <a href="{% url 'app_admin:user_list' %}" class="btn btn-outline-secondary">← Назад</a>
+        <a href="{% url 'app_admin:user_list' %}" class="btn btn-outline-secondary">Назад</a>
 
 
     </form>
