--- a/project/static/css/product_detail.css
+++ b/project/static/css/product_detail.css
@@ -47,6 +47,9 @@
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out;
+    font-size: 1em;
+    font-weight: 600;
+    text-align: center;
 }
 
 .btn-primary {
@@ -206,6 +209,7 @@
     font-weight: 600;
     text-align: center;
     width: 220px;
+    text-decoration: none;
 }
 
 .button-group form {
@@ -222,3 +226,21 @@
     background-color: #218838;
 }
 
+a.btn-success {
+    align-items: center;
+    justify-content: center;
+    background-color: #28a745;
+    color: white;
+    font-size: 1.05em;
+    height: 45px;
+    padding: 10px;
+    border-radius: 8px;
+    font-weight: 600;
+    text-align: center;
+    width: 220px;
+    text-decoration: none;
+}
+
+a.btn-success:hover {
+    background-color: #218838;
+}
