--- a/project/static/css/profile.css
+++ b/project/static/css/profile.css
@@ -103,3 +103,34 @@ form button[type="submit"]:hover {
     padding-left: 10px;
     margin-top: 30px;
 }
+
+.profile-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.logout-button {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  background-color: #e74c3c; /* Красный */
+  color: white;
+  text-decoration: none;
+  padding: 8px 14px;
+  border-radius: 8px;
+  transition: background-color 0.2s ease-in-out;
+  font-weight: 500;
+  margin-top: -2px;
+}
+
+.logout-button:hover {
+  background-color: #c0392b;
+  text-decoration: none;
+}
+
+.logout-button svg {
+  fill: white;
+}
