--- a/project/templates/users/profile.html
+++ b/project/templates/users/profile.html
@@ -4,7 +4,16 @@
 
 {% block content %}
     <div class="profile-container">
-        <h1>Мой профиль</h1>
+        <div class="profile-header">
+            <h1>Мой профиль</h1>
+                <a href="{% url 'logout' %}" class="logout-button" title="Выйти">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" width="20" height="20">
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M10 17l5-5-5-5v10zM19 3H5c-1.1 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
+                </svg>
+                <span>Выйти</span>
+            </a>
+        </div>
 
         <div class="user-info">
             <h2>Информация о пользователе</h2>
