--- a/project/templates/admin/base.html
+++ b/project/templates/admin/base.html
@@ -1,34 +1,35 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
+    <meta charset="UTF-8">
     <title>Кастомная админка</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/admin_base.css' %}">
+    {% block styles %}{% endblock %}
 </head>
 <body>
-    <div class="container mt-4">
-        <h1 class="mb-4">Cтраница администратора</h1>
+    <div class="admin-base-container">
+        <h1 class="admin-base-page-title">Страница администратора</h1>
 
         {% if request.user.is_superuser %}
-        <nav class="mb-3 d-flex flex-wrap align-items-center gap-2">
-            <a href="/" class=btn btn btn-outline-secondary">Вернуться на сайт</a>
-            <a class="btn btn-outline-primary" href="{% url 'app_admin:dashboard' %}">Главная</a>
-            <a class="btn btn-outline-secondary" href="{% url 'app_admin:shop_list' %}">Магазины</a>
-            <a class="btn btn-outline-secondary" href="{% url 'app_admin:shoprequest_list' %}">Заявки</a>
-            <a class="btn btn-outline-secondary" href="{% url 'app_admin:pickup_list' %}">Пункты самовывоза</a>
-            <a class="btn btn-outline-secondary" href="{% url 'app_admin:order_list' %}">Заказы</a>
-            <a class="btn btn-outline-secondary" href="{% url 'app_admin:product_list' %}">Товары</a>
-            <a class="btn btn-outline-secondary" href="{% url 'app_admin:category_list' %}">Категории</a>
-            <a class="btn btn-outline-secondary" href="{% url 'app_admin:review_list' %}">Отзывы</a>
-            <a class="btn btn-outline-secondary" href="{% url 'app_admin:user_list' %}">Пользователи</a>
-            <a class="btn btn-outline-danger ms-auto" href="{% url 'app_admin:logout' %}">Выйти</a>
+        <nav class="admin-base-nav">
+            <a href="/" class="admin-base-btn">Вернуться на сайт</a>
+            <a href="{% url 'app_admin:dashboard' %}" class="admin-base-btn">Главная</a>
+            <a href="{% url 'app_admin:shop_list' %}" class="admin-base-btn">Магазины</a>
+            <a href="{% url 'app_admin:shoprequest_list' %}" class="admin-base-btn">Заявки</a>
+            <a href="{% url 'app_admin:pickup_list' %}" class="admin-base-btn">Пункты самовывоза</a>
+            <a href="{% url 'app_admin:product_list' %}" class="admin-base-btn">Товары</a>
+            <a href="{% url 'app_admin:category_list' %}" class="admin-base-btn">Категории</a>
+            <a href="{% url 'app_admin:user_list' %}" class="admin-base-btn">Пользователи</a>
+            <a href="{% url 'app_admin:logout' %}" class="admin-base-btn danger">Выйти</a>
         </nav>
         {% endif %}
 
-        <hr>
+        <hr class="admin-base-hr">
+
         {% block content %}{% endblock %}
     </div>
+
 </body>
 </html>
-
