admin dashboard styles

--- a/project/templates/admin/dashboard.html
+++ b/project/templates/admin/dashboard.html
@@ -88,3 +88,7 @@
     </div>
 </div>
 {% endblock %}
+
+{% block styles %}
+<link rel="stylesheet" href="{% static 'css/admin_dashboard.css' %}">
+{% endblock %}
