--- a/project/templates/admin/model_update.html
+++ b/project/templates/admin/model_update.html
@@ -1,4 +1,5 @@
 {% extends 'admin/base.html' %}
+{% load widget_tweaks %}
 
 {% block content %}
 <div class="container mt-5">
@@ -12,7 +13,7 @@
                 {% for field in form %}
                     <div class="mb-4">
                         <label for="{{ field.id_for_label }}" class="form-label fw-semibold">{{ field.label }}</label>
-                        {{ field }}
+                        {% render_field field class="form-control" %}
                         {% if field.help_text %}
                             <div class="form-text">{{ field.help_text }}</div>
                         {% endif %}
