--- a/project/static/css/admin_base.css
+++ b/project/static/css/admin_base.css
@@ -60,6 +60,10 @@ body {
     color: white;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 .admin-base-hr {
     border: none;
     border-top: 1px solid #ddd;
