--- a/project/templates/admin/user_edit.html
+++ b/project/templates/admin/user_edit.html
@@ -1,4 +1,5 @@
 {% extends 'admin/base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="card shadow-sm p-4">
@@ -23,10 +24,14 @@
             {{ profile_form.pickup_point }}
         </div>
 
-        <button type="submit" class="btn btn-primary">Сохранить</button>
-        <a href="{% url 'app_admin:user_list' %}" class="btn btn-outline-secondary">Назад</a>
-
-
+        <div class="button-group">
+            <button type="submit" class="btn btn-primary">Сохранить</button>
+            <a href="{% url 'app_admin:user_list' %}" class="btn btn-outline-secondary">Назад</a>
+        </div>
     </form>
 </div>
+{% endblock %}
+
+{% block styles %}
+<link rel="stylesheet" href="{% static 'css/admin_user_edit.css' %}">
 {% endblock %}
