--- a/project/static/css/login.css
+++ b/project/static/css/login.css
@@ -63,3 +63,19 @@ form .error {
     font-size: 14px;
     margin-top: 5px;
 }
+
+.auth-link {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #555;
+    text-align: center;      /* Центрируем текст по горизонтали */
+}
+
+.auth-link a {
+    color: #007BFF;
+    text-decoration: none;
+}
+
+.auth-link a:hover {
+    text-decoration: underline;
+}
