--- a/project/static/css/register.css
+++ b/project/static/css/register.css
@@ -58,3 +58,19 @@ form input[type="password"]:focus {
     border-color: #28a745; /* Зеленый бордер при фокусе */
     outline: none;
 }
+
+.auth-link {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #555;
+    text-align: center;      /* Центрируем текст по горизонтали */
+}
+
+.auth-link a {
+    color: #007BFF;
+    text-decoration: none;
+}
+
+.auth-link a:hover {
+    text-decoration: underline;
+}
