--- a/project/static/css/user_orders.css
+++ b/project/static/css/user_orders.css
@@ -50,3 +50,9 @@
     color: inherit;
     display: block;
   }
+
+.order-status {
+    font-weight: bold;
+    color: #007BFF;
+    text-transform: capitalize;
+}
